[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Main Menu/GUI3D.gd" type="Script" id=1]
[ext_resource path="res://textures/background.png" type="Texture" id=2]
[ext_resource path="res://themes/theme_test.tres" type="Theme" id=3]
[ext_resource path="res://ubuntu-font-family/UB22C3.tres" type="DynamicFont" id=4]
[ext_resource path="res://dlcs/3D/menu/menu.tscn" type="PackedScene" id=5]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 4.5
margin_bottom = 4.5
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -8.0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -254.5
margin_top = -141.0
margin_right = 254.5
margin_bottom = 141.0

[node name="Play5" type="Button" parent="TextureRect/VBoxContainer"]
margin_right = 509.0
margin_bottom = 39.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "KEY_Play"
flat = true

[node name="Play8" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 43.0
margin_right = 509.0
margin_bottom = 82.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "Multiplayer"
flat = true

[node name="ImportMod" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 86.0
margin_right = 509.0
margin_bottom = 125.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "KEY_MOD"
flat = true

[node name="Continue" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 129.0
margin_right = 509.0
margin_bottom = 168.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "KEY_Continue"
flat = true

[node name="Play6" type="Button" parent="TextureRect/VBoxContainer"]
visible = false
margin_top = 172.0
margin_right = 509.0
margin_bottom = 211.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "KEY_DLCS"
flat = true

[node name="Play7" type="Button" parent="TextureRect/VBoxContainer"]
visible = false
margin_top = 172.0
margin_right = 509.0
margin_bottom = 211.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "KEY_REPORT_BUG"
flat = true

[node name="Licenses" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 172.0
margin_right = 509.0
margin_bottom = 211.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "KEY_DC"
flat = true

[node name="Quit" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 215.0
margin_right = 509.0
margin_bottom = 254.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "KEY_Quit"
flat = true

[node name="CheckBox" type="CheckBox" parent="TextureRect/VBoxContainer"]
margin_top = 258.0
margin_right = 509.0
margin_bottom = 282.0
text = "Enter 3D stage."

[node name="WindowDialog" type="WindowDialog" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.5
margin_top = -170.0
margin_right = 139.5
margin_bottom = 170.0
theme = ExtResource( 3 )

[node name="ItemList" type="ItemList" parent="TextureRect/WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="WindowDialog3" type="WindowDialog" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0
theme = ExtResource( 3 )
window_title = "Configure Your Settings"

[node name="main" parent="TextureRect/WindowDialog3" instance=ExtResource( 5 )]
margin_top = -63.0
margin_right = 20.0

[node name="LicenseSelector" type="WindowDialog" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -170.0
margin_right = 201.0
margin_bottom = 170.0
theme = ExtResource( 3 )
popup_exclusive = true

[node name="Label" type="Label" parent="TextureRect/LicenseSelector"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 92.0
theme = ExtResource( 3 )
text = "
Choose the license,
you would like to see
"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/LicenseSelector"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.375
margin_top = 3.375
margin_right = 3.375
margin_bottom = 3.375

[node name="PP" type="Button" parent="TextureRect/LicenseSelector/VBoxContainer"]
margin_right = 341.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 4 )
disabled = true
text = "3D DLC"

[node name="Label" type="Label" parent="."]
margin_right = 60.0
margin_bottom = 14.0

[node name="ModeSelect" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.5
margin_top = -159.5
margin_right = 144.5
margin_bottom = 159.5
window_title = "Otw√≥rz plik"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.pck", "*" )
show_hidden_files = true
current_dir = "/home/godot/Pulpit/pixel-zone-master"
current_path = "/home/godot/Pulpit/pixel-zone-master/"
[connection signal="pressed" from="TextureRect/VBoxContainer/Play5" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Play8" to="." method="_on_Play8_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/ImportMod" to="." method="_on_ImportMod_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Play6" to="." method="_on_Play6_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Play7" to="." method="_on_Play7_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Licenses" to="." method="_on_Licenses_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="popup_hide" from="TextureRect/WindowDialog3" to="." method="_on_WindowDialog3_popup_hide"]
[connection signal="warning" from="TextureRect/WindowDialog3/main" to="." method="_on_main_warning"]
[connection signal="pressed" from="TextureRect/LicenseSelector/VBoxContainer/PP" to="." method="_on_PP_pressed"]
[connection signal="file_selected" from="ModeSelect" to="." method="_on_ModeSelect_file_selected"]
